--- a/packages/core/src/components/drawer/drawer.scss
+++ b/packages/core/src/components/drawer/drawer.scss
@@ -10,58 +10,60 @@
 @import 'mixins/shadows';
 @import 'common-variables';
 
-.drawer-container {
-  top: 0;
-  right: 0;
-  @include box-shadow(3);
+:host {
+  .drawer-container {
+    top: 0;
+    right: 0;
+    @include box-shadow(3);
 
-  visibility: hidden;
+    visibility: hidden;
 
-  display: flex;
-  position: absolute;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
-  align-items: center;
+    display: flex;
+    position: absolute;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
 
-  max-height: 100vh;
-  min-height: $large-space;
-  background-color: var(--theme-color-1);
-  border-radius: $default-border-radius;
+    max-height: 100vh;
+    min-height: $large-space;
+    background-color: var(--theme-color-1);
+    border-radius: $default-border-radius;
 
-  transition: all $medium-time ease-out;
-}
-
-.toggle {
-  z-index: 100;
-  visibility: visible;
-}
-
-.drawer-container.full-height {
-  min-height: 100%;
-}
-
-.header {
-  display: flex;
-  position: relative;
-  align-items: center;
-  justify-content: flex-end;
-  height: 3.5rem;
-  padding: $small-space $default-space;
-  width: 100%;
-  order: 1;
-
-  .header-content {
-    flex-grow: 1;
-    margin-right: $default-space;
+    transition: all $medium-time ease-out;
   }
-}
 
-.content {
-  position: relative;
-  flex: 1;
-  flex-grow: 1;
-  order: 2;
-  height: 100%;
-  width: 100%;
-  overflow-y: auto;
+  .toggle {
+    z-index: 100;
+    visibility: visible;
+  }
+
+  .drawer-container.full-height {
+    min-height: 100%;
+  }
+
+  .header {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: flex-end;
+    height: 3.5rem;
+    padding: $small-space $default-space;
+    width: 100%;
+    order: 1;
+
+    .header-content {
+      flex-grow: 1;
+      margin-right: $default-space;
+    }
+  }
+
+  .content {
+    position: relative;
+    flex: 1;
+    flex-grow: 1;
+    order: 2;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+  }
 }
