--- a/packages/core/src/components/drawer/drawer.scss
+++ b/packages/core/src/components/drawer/drawer.scss
@@ -11,30 +11,32 @@
 @import 'common-variables';
 
 :host {
-  .drawer-container {
-    top: 0;
-    right: 0;
-    @include box-shadow(3);
+  top: 0;
+  right: 0;
+  @include box-shadow(3);
 
-    visibility: hidden;
+  visibility: hidden;
 
-    display: flex;
-    position: absolute;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  position: absolute;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
 
-    max-height: 100vh;
-    min-height: $large-space;
-    background-color: var(--theme-color-1);
-    border-radius: $default-border-radius;
+  max-height: 100vh;
+  min-height: $large-space;
+  background-color: var(--theme-color-1);
+  border-radius: $default-border-radius;
 
-    transition: all $medium-time ease-out;
-  }
+  transition: all $medium-time ease-out;
 
   .toggle {
     z-index: 100;
     visibility: visible;
+  }
+
+  .close-button {
+    margin-right: 0.5rem;
   }
 
   .drawer-container.full-height {
@@ -46,8 +48,7 @@
     position: relative;
     align-items: center;
     justify-content: flex-end;
-    height: 3.5rem;
-    padding: $small-space $default-space;
+    padding: 0.5rem;
     width: 100%;
     order: 1;
 
