fix: change box-sizing

--- a/packages/core/src/components/card-list/card-list.scss
+++ b/packages/core/src/components/card-list/card-list.scss
@@ -6,10 +6,13 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/shadow-dom/component';
 
 $CardList__Title__Height: 1.5rem;
 
 :host {
+  @include ix-component;
+
   display: flex;
   position: relative;
   flex-direction: column;
