--- a/packages/core/src/components/action-card/action-card.scss
+++ b/packages/core/src/components/action-card/action-card.scss
@@ -6,8 +6,10 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/shadow-dom/component';
 
 :host {
+  @include ix-component;
   display: block;
   position: relative;
   min-width: 13.375rem;
@@ -81,6 +83,74 @@
 
   ix-card.card-neutral:hover {
     --ix-card-background: var(--theme-color-neutral--hover);
+  }
+
+  ix-card.card-neutral:active {
+    --ix-card-background: var(--theme-color-neutral--active);
+  }
+}
+
+:host(:hover) {
+  ix-card.card-insight:hover {
+    --ix-card-background: var(--theme-color-ghost--hover);
+  }
+
+  ix-card.card-notification:hover {
+    --ix-card-background: var(--theme-color-component-1--hover);
+  }
+
+  ix-card.card-alarm:hover {
+    --ix-card-background: var(--theme-color-alarm--hover);
+  }
+
+  ix-card.card-critical:hover {
+    --ix-card-background: var(--theme-color-critical--hover);
+  }
+
+  ix-card.card-warning:hover {
+    --ix-card-background: var(--theme-color-warning--hover);
+  }
+
+  ix-card.card-success:hover {
+    --ix-card-background: var(--theme-color-success--hover);
+  }
+
+  ix-card.card-info:hover {
+    --ix-card-background: var(--theme-color-info--hover);
+  }
+
+  ix-card.card-neutral:hover {
+    --ix-card-background: var(--theme-color-neutral--hover);
+  }
+}
+
+:host(:active) {
+  ix-card.card-insight:active {
+    --ix-card-background: var(--theme-color-ghost--active);
+  }
+
+  ix-card.card-notification:active {
+    --ix-card-background: var(--theme-color-component-1--active);
+  }
+
+  ix-card.card-alarm:active {
+    --ix-card-background: var(--theme-color-alarm--active);
+  }
+
+  ix-card.card-critical:active {
+    --ix-card-background: var(--theme-color-critical--active);
+  }
+
+  ix-card.card-warning:active {
+    --ix-card-background: var(--theme-color-warning--active);
+  }
+
+  ix-card.card-success:active {
+    --ix-card-background: var(--theme-color-success--active);
+  }
+
+  ix-card.card-info:active {
+    --ix-card-background: var(--theme-color-info--active);
   }
 
   ix-card.card-neutral:active {
