--- a/packages/core/src/components/card-accordion/card-accordion.scss
+++ b/packages/core/src/components/card-accordion/card-accordion.scss
@@ -7,11 +7,13 @@
  * LICENSE file in the root directory of this source tree.
  */
 @import 'mixins/hover';
+@import 'mixins/shadow-dom/component';
 
 $action-height: 2.5rem;
 $expand-content-height: 15rem;
 
 :host {
+  @include ix-component;
   display: flex;
   position: relative;
   flex-direction: column;
