--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -6,10 +6,12 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/shadow-dom/component';
 
 $paddingContentLeftRight: 1rem;
 
 :host {
+  @include ix-component;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -27,7 +29,7 @@ $paddingContentLeftRight: 1rem;
     position: relative;
     flex-shrink: 0;
     flex-grow: 1;
-    width: calc(100% - #{$paddingContentLeftRight * 2});
+    width: 100%;
     padding: 1rem $paddingContentLeftRight;
     // min-height: calc(13.5rem - 2.5rem);
     height: calc(100% - 2rem);
