feat: change box-sizing

--- a/packages/core/src/components/empty-state/empty-state.scss
+++ b/packages/core/src/components/empty-state/empty-state.scss
@@ -1,6 +1,9 @@
 @import 'common-variables';
+@import 'mixins/shadow-dom/component';
 
 :host {
+  @include ix-component;
+
   .label__subHeader {
     color: var(--theme-color-soft-text);
   }
