--- a/packages/core/src/components/spinner/spinner.scss
+++ b/packages/core/src/components/spinner/spinner.scss
@@ -7,7 +7,11 @@
  * LICENSE file in the root directory of this source tree.
  */
 
+@import 'mixins/shadow-dom/component';
+
 :host {
+  @include ix-component;
+
   display: flex;
   position: relative;
   height: 2rem;
