--- a/packages/core/src/components/menu-about-news/menu-about-news.scss
+++ b/packages/core/src/components/menu-about-news/menu-about-news.scss
@@ -9,11 +9,15 @@
 
 @import 'common-variables';
 @import 'mixins/shadows';
+@import 'mixins/shadow-dom/component';
+
+$left: 3.4rem;
 
 :host {
+  @include ix-component;
+
   --margin: 0.5rem;
 
-  $left: 3.4rem;
   display: block;
   position: fixed;
   width: 20rem;
@@ -29,14 +33,6 @@
   margin-left: var(--margin) !important;
 
   @include box-shadow(4);
-
-  &.expanded {
-    left: calc(#{$left} + 12.7rem);
-  }
-
-  &.show {
-    display: none;
-  }
 
   .banner-container {
     position: absolute;
@@ -91,4 +87,12 @@
     border-bottom: var(--theme-weak-bdr-1);
     transform: translateX(calc(var(--margin) * -1 - 0.8rem)) rotateZ(45deg);
   }
+}
+
+:host(.expanded) {
+  left: calc(#{$left} + 12.7rem);
+}
+
+:host(.show) {
+  display: none;
 }
