--- a/packages/core/src/components/menu-avatar-item/menu-avatar-item.scss
+++ b/packages/core/src/components/menu-avatar-item/menu-avatar-item.scss
@@ -6,7 +6,9 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/shadow-dom/component';
 
 :host {
+  @include ix-component;
   display: block;
 }
