refactor(core/dropdown): enable shadow dom

--- a/packages/core/scss/components/_dropdown.scss
+++ b/packages/core/scss/components/_dropdown.scss
@@ -92,6 +92,7 @@
   padding: 0 $x-large-space;
   border: 1px solid transparent;
   color: var(--theme-menu-item--color);
+  background-color: transparent;
 
   &:focus-visible {
     background-color: var(--theme-menu-item--background);
