feat(core/dropdown): enable shadow dom

--- a/packages/core/src/components/dropdown-item/dropdown-item.scss
+++ b/packages/core/src/components/dropdown-item/dropdown-item.scss
@@ -8,29 +8,15 @@
  */
 
 @import 'common-variables';
+@import 'fonts';
+@import 'components/dropdown';
 @import 'mixins/hover';
 @import 'mixins/text-truncation';
 
 :host {
   display: block;
 
-  &.icon-only {
-    min-width: 0;
-
-    .dropdown-item > .glyph {
-      margin-inline-end: 0;
-    }
-
-    .dropdown-item {
-      padding: $tiny-space $small-space;
-
-      @include focus-visible {
-        border-color: #199fff;
-      }
-    }
-  }
-
-  :focus {
+  @include focus-visible {
     background-color: transparent;
     color: var(--theme-menu-item--color);
   }
@@ -40,16 +26,48 @@
     left: $small-space;
   }
 
-  &.checked {
-    background-color: var(--theme-select-list-item--background--selected);
-  }
-
   .label {
     @include ellipsis;
+    @include text-default;
   }
 
-  &.disabled {
-    pointer-events: none;
+  ix-icon {
+    margin-inline-end: $small-space;
+    transition: color 0;
+  }
+
+  .dropdown-item {
+    width: 100%;
+  }
+}
+
+:host(.icon-only) {
+  min-width: 0;
+
+  .dropdown-item > ix-icon {
+    margin-inline-end: 0;
+  }
+
+  .dropdown-item {
+    padding: $tiny-space $small-space;
+
+    @include focus-visible {
+      border-color: var(--color-focus-bdr);
+    }
+  }
+}
+
+:host(.checked) {
+  background-color: var(--theme-select-list-item--background--selected);
+}
+
+:host(.disabled) {
+  pointer-events: none;
+}
+
+:host(:hover:not(.disabled)) {
+  ix-icon {
+    color: var(--theme-color-std-text) !important;
   }
 }
 
