--- a/packages/core/src/components/workflow-steps/workflow-steps.scss
+++ b/packages/core/src/components/workflow-steps/workflow-steps.scss
@@ -8,8 +8,11 @@
  */
 
 @import 'common-variables';
+@import 'mixins/shadow-dom/component';
 
 :host {
+  @include ix-component;
+
   .steps {
     display: flex;
 
