--- a/packages/core/src/components/push-card/push-card.scss
+++ b/packages/core/src/components/push-card/push-card.scss
@@ -27,3 +27,71 @@
     height: 7.875rem;
   }
 }
+
+:host(:hover) {
+  ix-card.card-insight:hover {
+    --ix-card-background: var(--theme-color-ghost--hover);
+  }
+
+  ix-card.card-notification:hover {
+    --ix-card-background: var(--theme-color-component-1--hover);
+  }
+
+  ix-card.card-alarm:hover {
+    --ix-card-background: var(--theme-color-alarm--hover);
+  }
+
+  ix-card.card-critical:hover {
+    --ix-card-background: var(--theme-color-critical--hover);
+  }
+
+  ix-card.card-warning:hover {
+    --ix-card-background: var(--theme-color-warning--hover);
+  }
+
+  ix-card.card-success:hover {
+    --ix-card-background: var(--theme-color-success--hover);
+  }
+
+  ix-card.card-info:hover {
+    --ix-card-background: var(--theme-color-info--hover);
+  }
+
+  ix-card.card-neutral:hover {
+    --ix-card-background: var(--theme-color-neutral--hover);
+  }
+}
+
+:host(:active) {
+  ix-card.card-insight:active {
+    --ix-card-background: var(--theme-color-ghost--active);
+  }
+
+  ix-card.card-notification:active {
+    --ix-card-background: var(--theme-color-component-1--active);
+  }
+
+  ix-card.card-alarm:active {
+    --ix-card-background: var(--theme-color-alarm--active);
+  }
+
+  ix-card.card-critical:active {
+    --ix-card-background: var(--theme-color-critical--active);
+  }
+
+  ix-card.card-warning:active {
+    --ix-card-background: var(--theme-color-warning--active);
+  }
+
+  ix-card.card-success:active {
+    --ix-card-background: var(--theme-color-success--active);
+  }
+
+  ix-card.card-info:active {
+    --ix-card-background: var(--theme-color-info--active);
+  }
+
+  ix-card.card-neutral:active {
+    --ix-card-background: var(--theme-color-neutral--active);
+  }
+}
