--- a/packages/core/src/components/dropdown-item/dropdown-item.scss
+++ b/packages/core/src/components/dropdown-item/dropdown-item.scss
@@ -9,7 +9,6 @@
 
 @import 'common-variables';
 @import 'fonts';
-@import 'components/dropdown';
 @import 'mixins/hover';
 @import 'mixins/text-truncation';
 
@@ -37,6 +36,7 @@
   }
 
   .dropdown-item {
+    all: unset;
     width: 100%;
   }
 }
