--- a/packages/core/src/components/dropdown/dropdown.scss
+++ b/packages/core/src/components/dropdown/dropdown.scss
@@ -12,9 +12,10 @@
 @import 'mixins/fonts';
 @import 'mixins/text-truncation';
 @import 'mixins/shadow-dom/component';
-@import 'components/dropdown';
 
 :host {
+  background-color: var(--theme-color-2);
+  border-radius: var(--theme-default-border-radius);
   @include ix-component;
   min-width: 0px;
   z-index: var(--theme-z-index-dropdown);
