feat(core/toast): enable shadow dom

--- a/packages/core/src/components/toast/styles/toast-container.scss
+++ b/packages/core/src/components/toast/styles/toast-container.scss
@@ -8,6 +8,11 @@
  */
 
 @import 'common-variables';
+@import 'mixins/shadow-dom/component';
+
+:host {
+  @include ix-component;
+}
 
 #toast-container {
   > :not(:last-child) {
