fix(core/button): pass through submit related events

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -9,8 +9,10 @@
 
 @import 'common-variables';
 @import './components/buttons';
-
+@import 'mixins/shadow-dom/component';
 :host {
+  @include ix-component;
+
   display: inline-block;
   width: auto;
   height: 2rem;
