--- a/packages/core/src/components/application-header/application-header.scss
+++ b/packages/core/src/components/application-header/application-header.scss
@@ -8,12 +8,13 @@
  */
 
 :host {
+  $paddingLeft: 1rem;
   display: flex;
   align-items: center;
   position: relative;
   width: 100%;
   height: 2.75rem;
-  padding-left: 1rem;
+  padding-left: $paddingLeft;
 
   color: var(--theme-app-header--color);
   background-color: var(--theme-app-header--background);
