test: add testcase for submit form

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -10,6 +10,7 @@
 @import 'common-variables';
 @import './components/buttons';
 @import 'mixins/shadow-dom/component';
+
 :host {
   @include ix-component;
 
@@ -17,10 +18,6 @@
   width: auto;
   height: 2rem;
   vertical-align: middle;
-
-  &.disabled {
-    pointer-events: none;
-  }
 
   .btn {
     width: 100%;
@@ -30,4 +27,8 @@
   button:not(:disabled) {
     cursor: pointer;
   }
+}
+
+:host(.disabled) {
+  pointer-events: none;
 }
