--- a/packages/core/src/components/icon-button/icon-button.scss
+++ b/packages/core/src/components/icon-button/icon-button.scss
@@ -14,10 +14,6 @@
   display: inline-block;
   vertical-align: middle;
 
-  &.disabled {
-    pointer-events: none;
-  }
-
   .icon-button {
     padding: 0;
     overflow: hidden;
@@ -26,4 +22,8 @@
   button:not(:disabled) {
     cursor: pointer;
   }
+}
+
+:host(.disabled) {
+  pointer-events: none;
 }
